# waifu-clustering

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run_scrapper.py  vite.config.js  waifu_antiwaifus.json  waifu_neighbors.json  waifu_similar.json
.github/workflows/: deploy.yml
assets/: index--_kgeipS.css  index-ALsQyIBI.js  index-B00kgTIO.js  index-BAE8dl_L.js  index-BlSR0QyS.js  index-BlYlwXXQ.css  index-Bn8GEIvl.css  index-CAXxI3lX.js  index-CNad7OpK.css  index-CanqbM-_.js  index-CwjGzA9f.js  index-DEo0IkcH.js  index-DGdhTXc5.css  index-DQPou_A2.css  index-Dfso-Vkl.css  index-Dhm-fcIW.js  index-DxxcIFt-.js  index-EApzIHZj.js  index-HZTeM9zx.css  index-VKzFL2xl.js  index-haGCvto3.css  index-kkvARuCK.js
clustering/: exploration.ipynb
data/: compute_tsne.py  d3-dendrogram.json  import_data.py  pyproject.toml
frontend/: import_data.py  package-lock.json  package.json
frontend/src/: App.js  waifu_links.json  waifus.json
public/: waifu_antiwaifus.json  waifu_layout.json  waifu_neighbors.json  waifu_similar.json
src/: App.jsx  index.css  waifus.json
