[tool.poetry]
name = "waifu-clustering"
version = "0.1.0"
description = ""
authors = ["Xiang Chen <xiangchenchen96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
seaborn = "^0.11.1"
matplotlib = "^3.3.4"
pandas = "^1.2.2"
scikit-learn = "^0.24.1"
scipy = "^1.6.0"
requests = "^2.25.1"
sqlitedict = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
